--- a/.github/workflows/openwrt builder.yml
+++ b/.github/workflows/openwrt builder.yml
@@ -1,10 +1,3 @@
-#
-# 基于 https://github.com/P3TERX/Actions-OpenWrt
-#
-# 文件: .github/workflows/immortalwrt-builder.yml
-# 描述: 使用 GitHub Actions 构建 ImmortalWrt 固件 (带增强缓存)
-#
-
 # 工作流名称
 name: ImmortalWrt Builder
 
@@ -62,19 +55,20 @@ jobs:
         fi
       shell: bash
 
-    # 恢复软件包下载缓存
+    # 恢复软件包下载缓存 - 优化缓存键以包含分支引用
     - name: Cache Downloaded Packages
       if: env.CACHE_ENABLED == 'true'
       uses: actions/cache/restore@v4
       id: dl-cache
       with:
         path: /workdir/immortalwrt/dl
-        key: dl-${{ steps.get-config-hash.outputs.config_hash }}-${{ steps.get-date.outputs.date }}
+        key: dl-${{ steps.get-config-hash.outputs.config_hash }}-${{ github.ref }}-${{ steps.get-date.outputs.date }}
         restore-keys: |
+          dl-${{ steps.get-config-hash.outputs.config_hash }}-${{ github.ref }}-
           dl-${{ steps.get-config-hash.outputs.config_hash }}-
           dl-
 
-    # 恢复工具链和构建目录缓存
+    # 恢复工具链和构建目录缓存 - 优化缓存键以包含分支引用
     - name: Cache Build Directories
       if: env.CACHE_ENABLED == 'true'
       uses: actions/cache/restore@v4
@@ -84,20 +78,22 @@ jobs:
           /workdir/immortalwrt/build_dir/host
           /workdir/immortalwrt/build_dir/toolchain-*
           /workdir/immortalwrt/staging_dir
-        key: build-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-${{ steps.get-date.outputs.date }}
+        key: build-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-${{ github.ref }}-${{ steps.get-date.outputs.date }}
         restore-keys: |
+          build-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-${{ github.ref }}-
           build-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-
           build-${{ runner.os }}-
 
-    # 设置 ccache
+    # 设置 ccache - 优化缓存键以包含分支引用
     - name: Setup ccache
       uses: actions/cache/restore@v4
       if: env.CACHE_ENABLED == 'true'
       id: ccache
       with:
         path: /workdir/immortalwrt/.ccache
-        key: ccache-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-${{ steps.get-date.outputs.date }}
+        key: ccache-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-${{ github.ref }}-${{ steps.get-date.outputs.date }}
         restore-keys: |
+          ccache-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-${{ github.ref }}-
           ccache-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-
           ccache-${{ runner.os }}-
 
@@ -181,15 +177,15 @@ jobs:
         # 删除小于 1024 字节的文件
         find dl -size -1024c -exec rm -f {} \;
 
-    # 编译固件
+    # 编译固件 - 线程优化
     - name: Compile the firmware
       id: compile
       run: |
         cd immortalwrt
         # 显示使用的线程数
         echo -e "$(nproc) thread compile"
-        # 尝试使用多线程编译，如果失败则尝试单线程，再失败则使用单线程并显示详细信息
-        make -j$(nproc) || make -j1 || make -j1 V=s
+        # 使用线程数+1的方式进行编译，提高效率
+        make -j$(($(nproc) + 1)) || make -j1 || make -j1 V=s
         # 设置编译成功状态
         echo "status=success" >> $GITHUB_OUTPUT
         # 提取设备名称
@@ -199,15 +195,15 @@ jobs:
         # 添加日期时间到环境变量
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
-    # 保存下载缓存
+    # 保存下载缓存 - 优化缓存键以包含分支引用
     - name: Save Downloaded Packages Cache
       uses: actions/cache/save@v4
       if: env.CACHE_ENABLED == 'true' && steps.compile.outputs.status == 'success'
       with:
         path: /workdir/immortalwrt/dl
-        key: ${{ steps.dl-cache.outputs.cache-primary-key || format('dl-{0}-{1}', steps.get-config-hash.outputs.config_hash, steps.get-date.outputs.date) }}
+        key: ${{ steps.dl-cache.outputs.cache-primary-key || format('dl-{0}-{1}-{2}', steps.get-config-hash.outputs.config_hash, github.ref, steps.get-date.outputs.date) }}
 
-    # 保存构建目录缓存
+    # 保存构建目录缓存 - 优化缓存键以包含分支引用
     - name: Save Build Cache
       uses: actions/cache/save@v4
       if: env.CACHE_ENABLED == 'true' && steps.compile.outputs.status == 'success'
@@ -216,15 +212,15 @@ jobs:
           /workdir/immortalwrt/build_dir/host
           /workdir/immortalwrt/build_dir/toolchain-*
           /workdir/immortalwrt/staging_dir
-        key: ${{ steps.build-cache.outputs.cache-primary-key || format('build-{0}-{1}-{2}', runner.os, steps.get-config-hash.outputs.config_hash, steps.get-date.outputs.date) }}
+        key: ${{ steps.build-cache.outputs.cache-primary-key || format('build-{0}-{1}-{2}-{3}', runner.os, steps.get-config-hash.outputs.config_hash, github.ref, steps.get-date.outputs.date) }}
 
-    # 保存 ccache 缓存
+    # 保存 ccache 缓存 - 优化缓存键以包含分支引用
     - name: Save ccache
       uses: actions/cache/save@v4
       if: env.CACHE_ENABLED == 'true' && steps.compile.outputs.status == 'success'
       with:
         path: /workdir/immortalwrt/.ccache
-        key: ${{ steps.ccache.outputs.cache-primary-key || format('ccache-{0}-{1}-{2}', runner.os, steps.get-config-hash.outputs.config_hash, steps.get-date.outputs.date) }}
+        key: ${{ steps.ccache.outputs.cache-primary-key || format('ccache-{0}-{1}-{2}-{3}', runner.os, steps.get-config-hash.outputs.config_hash, github.ref, steps.get-date.outputs.date) }}
 
     # 检查空间使用情况
     - name: Check space usage
@@ -250,7 +246,7 @@ jobs:
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
 
-    # 上传固件目录
+    # 上传固件目录 - 优化上传配置
     - name: Upload firmware directory
       uses: actions/upload-artifact@v4
       if: steps.organize.outputs.status == 'success' && !cancelled()
@@ -258,6 +254,8 @@ jobs:
         name: ImmortalWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
         retention-days: 14
+        if-no-files-found: error  # 如果没有找到文件则报错
+        compression-level: 9  # 最高压缩级别
 
     # 生成发布标签（如果设置了 UPLOAD_RELEASE）
     - name: Generate release tag
