--- a/.github/workflows/build-mvebu.yml
+++ b/.github/workflows/build-mvebu.yml
@@ -3,12 +3,10 @@ name: ImmortalWrt Mvebu Builder
 
 # 触发条件
 on:
-  schedule:
-    # 北京时间(UTC+8)凌晨4点对应的是UTC时间的前一天20点
-    # 所以我们需要设置为 "0 20 */2 * *"
-    - cron: '0 20 */2 * *'
   repository_dispatch:  # 允许通过 API 触发工作流
   workflow_dispatch:    # 允许手动在 GitHub 界面触发工作流
+  schedule:
+    - cron: '0 20 */2 * *'  # 每2天 UTC 20:00 运行 (北京时间凌晨 4:00)
 # 添加这个权限配置
 permissions:
   contents: write    # 用于发布版本和提交代码
@@ -92,20 +90,28 @@ jobs:
         mkdir -p /workdir/immortalwrt/build_dir/host
         mkdir -p /workdir/immortalwrt/staging_dir
 
-    # 恢复软件包下载缓存 - 在目录创建后恢复
+    # 获取源代码提交哈希，用于缓存键
+    - name: Get Source Code Hash
+      id: get-source-hash
+      run: |
+        cd /workdir/immortalwrt
+        echo "source_hash=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      shell: bash
+
+    # 恢复软件包下载缓存 - 添加了源代码哈希到缓存键
     - name: Cache Downloaded Packages
       if: env.CACHE_ENABLED == 'true'
       uses: actions/cache/restore@v4
       id: dl-cache
       with:
         path: /workdir/immortalwrt/dl
-        key: dl-${{ steps.get-config-hash.outputs.config_hash }}-${{ github.ref }}-${{ steps.get-date.outputs.date }}
+        key: dl-${{ steps.get-config-hash.outputs.config_hash }}-${{ steps.get-source-hash.outputs.source_hash }}-${{ github.ref }}-${{ steps.get-date.outputs.date }}
         restore-keys: |
-          dl-${{ steps.get-config-hash.outputs.config_hash }}-${{ github.ref }}-
+          dl-${{ steps.get-config-hash.outputs.config_hash }}-${{ steps.get-source-hash.outputs.source_hash }}-${{ github.ref }}-
+          dl-${{ steps.get-config-hash.outputs.config_hash }}-${{ steps.get-source-hash.outputs.source_hash }}-
           dl-${{ steps.get-config-hash.outputs.config_hash }}-
-          dl-
 
-    # 恢复工具链和构建目录缓存 - 在目录创建后恢复
+    # 恢复工具链和构建目录缓存 - 添加了源代码哈希到缓存键
     - name: Cache Build Directories
       if: env.CACHE_ENABLED == 'true'
       uses: actions/cache/restore@v4
@@ -115,24 +121,24 @@ jobs:
           /workdir/immortalwrt/build_dir/host
           /workdir/immortalwrt/build_dir/toolchain-*
           /workdir/immortalwrt/staging_dir
-        key: build-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-${{ github.ref }}-${{ steps.get-date.outputs.date }}
+        key: build-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-${{ steps.get-source-hash.outputs.source_hash }}-${{ github.ref }}-${{ steps.get-date.outputs.date }}
         restore-keys: |
-          build-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-${{ github.ref }}-
+          build-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-${{ steps.get-source-hash.outputs.source_hash }}-${{ github.ref }}-
+          build-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-${{ steps.get-source-hash.outputs.source_hash }}-
           build-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-
-          build-${{ runner.os }}-
 
-    # 设置 ccache - 在目录创建后恢复
+    # 设置 ccache - 添加了源代码哈希到缓存键
     - name: Setup ccache
       uses: actions/cache/restore@v4
       if: env.CACHE_ENABLED == 'true'
       id: ccache
       with:
         path: /workdir/immortalwrt/.ccache
-        key: ccache-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-${{ github.ref }}-${{ steps.get-date.outputs.date }}
+        key: ccache-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-${{ steps.get-source-hash.outputs.source_hash }}-${{ github.ref }}-${{ steps.get-date.outputs.date }}
         restore-keys: |
-          ccache-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-${{ github.ref }}-
+          ccache-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-${{ steps.get-source-hash.outputs.source_hash }}-${{ github.ref }}-
+          ccache-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-${{ steps.get-source-hash.outputs.source_hash }}-
           ccache-${{ runner.os }}-${{ steps.get-config-hash.outputs.config_hash }}-
-          ccache-${{ runner.os }}-
 
     # 加载自定义 feeds 配置
     - name: Load custom feeds
@@ -200,15 +206,15 @@ jobs:
         # 添加日期时间到环境变量
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
-    # 保存下载缓存 - 优化缓存键以包含分支引用
+    # 保存下载缓存 - 添加了源代码哈希到缓存键
     - name: Save Downloaded Packages Cache
       uses: actions/cache/save@v4
       if: env.CACHE_ENABLED == 'true' && steps.compile.outputs.status == 'success'
       with:
         path: /workdir/immortalwrt/dl
-        key: ${{ steps.dl-cache.outputs.cache-primary-key || format('dl-{0}-{1}-{2}', steps.get-config-hash.outputs.config_hash, github.ref, steps.get-date.outputs.date) }}
+        key: ${{ steps.dl-cache.outputs.cache-primary-key || format('dl-{0}-{1}-{2}-{3}', steps.get-config-hash.outputs.config_hash, steps.get-source-hash.outputs.source_hash, github.ref, steps.get-date.outputs.date) }}
 
-    # 保存构建目录缓存 - 优化缓存键以包含分支引用
+    # 保存构建目录缓存 - 添加了源代码哈希到缓存键
     - name: Save Build Cache
       uses: actions/cache/save@v4
       if: env.CACHE_ENABLED == 'true' && steps.compile.outputs.status == 'success'
@@ -217,15 +223,15 @@ jobs:
           /workdir/immortalwrt/build_dir/host
           /workdir/immortalwrt/build_dir/toolchain-*
           /workdir/immortalwrt/staging_dir
-        key: ${{ steps.build-cache.outputs.cache-primary-key || format('build-{0}-{1}-{2}-{3}', runner.os, steps.get-config-hash.outputs.config_hash, github.ref, steps.get-date.outputs.date) }}
+        key: ${{ steps.build-cache.outputs.cache-primary-key || format('build-{0}-{1}-{2}-{3}-{4}', runner.os, steps.get-config-hash.outputs.config_hash, steps.get-source-hash.outputs.source_hash, github.ref, steps.get-date.outputs.date) }}
 
-    # 保存 ccache 缓存 - 优化缓存键以包含分支引用
+    # 保存 ccache 缓存 - 添加了源代码哈希到缓存键
     - name: Save ccache
       uses: actions/cache/save@v4
       if: env.CACHE_ENABLED == 'true' && steps.compile.outputs.status == 'success'
       with:
         path: /workdir/immortalwrt/.ccache
-        key: ${{ steps.ccache.outputs.cache-primary-key || format('ccache-{0}-{1}-{2}-{3}', runner.os, steps.get-config-hash.outputs.config_hash, github.ref, steps.get-date.outputs.date) }}
+        key: ${{ steps.ccache.outputs.cache-primary-key || format('ccache-{0}-{1}-{2}-{3}-{4}', runner.os, steps.get-config-hash.outputs.config_hash, steps.get-source-hash.outputs.source_hash, github.ref, steps.get-date.outputs.date) }}
 
     # 检查空间使用情况
     - name: Check space usage
@@ -273,6 +279,10 @@ jobs:
         touch release.txt
         [ -s DEVICE_NAME ] && echo "设备: $(cat DEVICE_NAME)" >> release.txt
         echo "编译时间: $(date +"%Y-%m-%d %H:%M:%S")" >> release.txt
+        # 添加源代码提交信息
+        cd /workdir/immortalwrt
+        echo "源代码版本: $(git rev-parse --short HEAD)" >> $GITHUB_WORKSPACE/release.txt
+        echo "提交时间: $(git log -1 --format='%ci')" >> $GITHUB_WORKSPACE/release.txt
         echo "status=success" >> $GITHUB_OUTPUT
 
     # 将固件上传到 GitHub Releases
