--- a/.github/workflows/build-x64.yml
+++ b/.github/workflows/build-x64.yml
@@ -142,6 +142,9 @@ jobs:
 
     # 加载自定义 feeds 配置
     - name: Load custom feeds
+      env:
+        PPPOE_USERNAME2: ${{ secrets.PPPOE_USERNAME2 }}
+        PPPOE_PASSWORD2: ${{ secrets.PPPOE_PASSWORD2 }}
       run: |
         # 如果存在自定义 feeds 配置，则替换默认配置
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF immortalwrt/feeds.conf.default
